--- a/src/classes/_hu-align-items.scss
+++ b/src/classes/_hu-align-items.scss
@@ -18,7 +18,7 @@
         $property: align-items;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-align-items-modules) {
+        @include hu-responsive($class-name, $hu-align-items-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
