--- a/src/classes/_hu-order.scss
+++ b/src/classes/_hu-order.scss
@@ -18,7 +18,7 @@
         $property: order;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-order-modules) {
+        @include hu-responsive($class-name, $hu-order-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
