--- a/src/classes/_hu-scroll-behavior.scss
+++ b/src/classes/_hu-scroll-behavior.scss
@@ -18,7 +18,7 @@
         $property: scroll-behavior;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-scroll-behavior-modules) {
+        @include hu-responsive($class-name, $hu-scroll-behavior-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
