--- a/src/classes/_hu-z-index.scss
+++ b/src/classes/_hu-z-index.scss
@@ -18,7 +18,7 @@
         $property: z-index;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-z-index-modules) {
+        @include hu-responsive($class-name, $hu-z-index-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
