--- a/src/classes/_hu-flex-direction.scss
+++ b/src/classes/_hu-flex-direction.scss
@@ -18,7 +18,7 @@
         $property: flex-direction;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-flex-direction-modules) {
+        @include hu-responsive($class-name, $hu-flex-direction-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
