--- a/src/classes/_hu-font-size.scss
+++ b/src/classes/_hu-font-size.scss
@@ -18,7 +18,7 @@
         $property: font-size;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-font-size-modules) {
+        @include hu-responsive($class-name, $hu-font-size-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
