--- a/src/classes/_hu-font-smoothing.scss
+++ b/src/classes/_hu-font-smoothing.scss
@@ -17,7 +17,7 @@
       @each $type, $value in $hu-font-smoothing-types {
         $class-name: hu-class-name(font-smoothing);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-font-smoothing-modules) {
+        @include hu-responsive($class-name, $hu-font-smoothing-modules, $bp-scale) {
           @include _hu-font-smoothing-declarations;
         }
       }
