--- a/src/classes/_hu-font-weight.scss
+++ b/src/classes/_hu-font-weight.scss
@@ -18,7 +18,7 @@
         $property: font-weight;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-font-weight-modules) {
+        @include hu-responsive($class-name, $hu-font-weight-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
