--- a/src/classes/_hu-max-height.scss
+++ b/src/classes/_hu-max-height.scss
@@ -18,7 +18,7 @@
         $property: max-height;
         $value: if($value, $value, $type);
 
-        @include hu-responsive($class-name, $bp-scale, $hu-max-height-modules) {
+        @include hu-responsive($class-name, $hu-max-height-modules, $bp-scale) {
           #{$property}: $value;
         }
       }
