--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -3,6 +3,7 @@
 @import "hu-colors";
 @import "hu-debug";
 @import "hu-escape-class-name-types";
+@import "hu-focus";
 @import "hu-namespace";
 @import "hu-spacings";
 @import "hu-states";
