--- a/src/mixins/_hu-hocus.scss
+++ b/src/mixins/_hu-hocus.scss
@@ -1,9 +1,6 @@
-$hu-hocus-focus-prefix: "" !default;
-$hu-hocus-focus-pseudo: ":focus" !default;
-
 @mixin hu-hocus($class-name, $module: hocus) {
   @if ($module == focus) {
-    #{$hu-hocus-focus-prefix} .focus--#{$class-name}#{$hu-hocus-focus-pseudo} {
+    #{$hu-focus-parent} .focus--#{$class-name}#{$hu-focus-pseudo} {
       @content;
     }
   }
@@ -13,7 +10,7 @@ $hu-hocus-focus-pseudo: ":focus" !default;
     }
   }
   @else if ($module == hocus) {
-    #{$hu-hocus-focus-prefix} .hocus--#{$class-name}#{$hu-hocus-focus-pseudo},
+    #{$hu-focus-parent} .hocus--#{$class-name}#{$hu-focus-pseudo},
     .hocus--#{$class-name}:hover {
       @content;
     }
