Add font-style class and all grid class placeholders

--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -25,9 +25,28 @@
 @import "hu-flex-wrap";
 @import "hu-float";
 @import "hu-font-family";
-@import "hu-font-smoothing";
 @import "hu-font-size";
+@import "hu-font-smoothing";
+@import "hu-font-style";
 @import "hu-font-weight";
+@import "hu-grid";
+@import "hu-grid-area";
+@import "hu-grid-auto-columns";
+@import "hu-grid-auto-flow";
+@import "hu-grid-auto-rows";
+@import "hu-grid-column";
+@import "hu-grid-column-end";
+@import "hu-grid-column-gap";
+@import "hu-grid-column-start";
+@import "hu-grid-gap";
+@import "hu-grid-row";
+@import "hu-grid-row-end";
+@import "hu-grid-row-gap";
+@import "hu-grid-row-start";
+@import "hu-grid-template";
+@import "hu-grid-template-areas";
+@import "hu-grid-template-columns";
+@import "hu-grid-template-rows";
 @import "hu-height";
 @import "hu-justify-content";
 @import "hu-justify-items";
