--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -61,6 +61,7 @@
 @import "hu-momentum-scrolling";
 @import "hu-opacity";
 @import "hu-order";
+@import "hu-outline";
 @import "hu-overflow";
 @import "hu-overflow-x";
 @import "hu-overflow-y";
