--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -1,6 +1,15 @@
 @import "hu-align-content";
 @import "hu-align-items";
 @import "hu-align-self";
+@import "hu-animation";
+@import "hu-animation-count";
+@import "hu-animation-delay";
+@import "hu-animation-direction";
+@import "hu-animation-duration";
+@import "hu-animation-easing";
+@import "hu-animation-mode";
+@import "hu-animation-name";
+@import "hu-animation-state";
 @import "hu-appearance";
 @import "hu-backface";
 @import "hu-bg-color";
