change spacings just to spacing-scale

--- a/src/variables/classes/_hu-margin.scss
+++ b/src/variables/classes/_hu-margin.scss
@@ -1,4 +1,4 @@
-$hu-margin-modules: $hu-spacing-modules !default;
+$hu-margin-modules: (base, responsive) !default;
 
 $hu-margin-scale: $hu-spacing-scale !default;
 
