--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -5,6 +5,6 @@
 @import "hu-escape-class-name-types";
 @import "hu-focus";
 @import "hu-namespace";
-@import "hu-spacings";
+@import "hu-spacing-scale";
 @import "hu-states";
 @import "hu-themes";
