--- a/src/variables/classes/_hu-padding.scss
+++ b/src/variables/classes/_hu-padding.scss
@@ -1,4 +1,4 @@
-$hu-padding-modules: $hu-spacing-modules !default;
+$hu-padding-modules: $hu-margin-modules !default;
 
 $hu-padding-scale: $hu-spacing-scale !default;
 
