--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -7,5 +7,5 @@ $hu-reset-html-font-size: $hu-f-rem-context !default;
 $hu-reset-html-font-smoothing: true !default;
 $hu-reset-html-overflow-y: null !default;
 $hu-reset-img-responsive: true !default;
-$hu-reset-input-focus-color: null !default;
 $hu-reset-input-placeholder-color: #767676 !default;
+$hu-reset-remove-number-input-spinners: true !default;
