--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -9,3 +9,4 @@ $hu-reset-html-overflow-y: null !default;
 $hu-reset-img-responsive: true !default;
 $hu-reset-input-placeholder-color: #767676 !default;
 $hu-reset-remove-number-input-spinners: true !default;
+$hu-reset-text-input-appearance: textfield !default;
