--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -23,6 +23,7 @@
 @import "hu-border-radius";
 @import "hu-border-style";
 @import "hu-border-width";
+@import "hu-box-shadow";
 @import "hu-box-sizing";
 @import "hu-color";
 @import "hu-columns";
@@ -82,7 +83,6 @@
 @import "hu-rotate";
 @import "hu-scale";
 @import "hu-scroll-behavior";
-@import "hu-shadow";
 @import "hu-svg-fill-color";
 @import "hu-svg-fill-rule";
 @import "hu-svg-stroke-color";
@@ -91,6 +91,7 @@
 @import "hu-text-align";
 @import "hu-text-case";
 @import "hu-text-decoration";
+@import "hu-text-shadow";
 @import "hu-theme-bg-color";
 @import "hu-theme-border-color";
 @import "hu-theme-color";
