add flex and flex-flow placeholders

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -29,7 +29,9 @@
 @import "hu-columns";
 @import "hu-cursor";
 @import "hu-display";
+@import "hu-flex";
 @import "hu-flex-direction";
+@import "hu-flex-flow";
 @import "hu-flex-grow";
 @import "hu-flex-shrink";
 @import "hu-flex-wrap";
